# AutoPasFunctorBench

./: CMakeLists.txt  ForceReaderArgon.py  ForceReaderAxidRoteller.py  LICENSE  README.md  main.cpp
cluster-scripts/: benchmark.cmd
cmake/modules/: autopas.cmake
